--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,59 @@
 
   <body>
     <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-      <% end %>
+
+       <nav class = "navbar navbar-expand-lg navbar-light bg-secondary text-white p-2">
+        <div class="container">
+      　<a class="navbar-brand" href="/">
+      　  <span>Bookers</span>
+      　</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+           　<span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ml-auto">
+           <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Books", '/books', class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+            </li>
+            <% else %>
+            <li class="nav-item">
+              <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Books", '/books', class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
+            </li>
+           <% end %>
+          </ul>
+        </div>
+       </nav>
     </header>
-    <%= yield %>
+    <main>
+     <%= yield %>
+    </main>
+    <footer>
+     <div class="container mt-5">
+  	  <div class="row">
+    	 <div class="mx-auto">
+    		<p>CopyRight Infratop.inc</p>
+    	 </div>
+      </div>
+     </div>
+    </footer>
   </body>
 </html>
