--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
               <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+              <%= link_to "Users", users_path(current_user.id), class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "Books", '/books', class: 'nav-link text-dark' %>
@@ -38,13 +38,13 @@
             </li>
             <% else %>
             <li class="nav-item">
-              <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
+              <%= link_to "Home", root_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "About", about_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Books", '/books', class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
