--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,34 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class = "container">
+  <div class = "row">
+    <div class = "message mx-auto">
+      <h1>
+        welcome to
+        <strong>
+          Bookers
+        </strong>
+        !!
+      </h1>
+      <p>
+        In
+        <strong>
+          Bookers
+        </strong>
+        ,
+      </p>
+      <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+      <p> about various books!</p>
+      <div class = "wrapper col-10 mx-auto">
+        <div class = "row">
+          <button type = "button" class = "btn  btn-info btn-block">
+           <%= link_to "Log in", new_user_session_path %>
+          </button>
+        </div>
+        <div class="row">
+         <button type = "button" class = "btn  btn-success btn-block">
+           <%= link_to "Sign up", new_user_registration_path %>
+         </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
