--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,28 @@
-<h1>popopopopo</h1>
+<div class = "container">
+  <%= render 'books/list', book: @book, user_id: @user_id %>
+  <div class = "row">
+    <div class = "col-lg-8">
+     <h1>Book detail</h1>
+     <table  class="table table-striped">
+      <tbody>
+           <tr>
+            <td>
+              <%= image_tag current_user.get_profile_image %>
+            </td>
+           </tr>
+           <tr>
+            <td>
+              <%= @book_params.title %>
+            </td>
+           </tr>
+           <tr>
+            <td>
+              <%= @book_params.body %>
+            </td>
+           </tr>
+      </tbody>
+     </table>
+    </div>
+  </div>
+</div>
+
