--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,43 +1,15 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+<% end %>
 <div class = "container">
   <div class = "row">
-    <div class = "col-lg-4">
 
-      <h1>User info</h1>
-      <%= image_tag current_user.get_profile_image %>
-      <table class = "table table-striped">
-       <tbody>
-         <tr>
-           <th>
-             name
-           </th>
-           <th>
-             <%= current_user.name %>
-           </th>
-         </tr>
-         <tr>
-           <th>
-             introduction
-           </th>
-           <th>
-             <%= current_user.introduction %>
-           </th>
-         </tr>
-       </tbody>
-      </table>
-      <button type = "button" class = "btn  btn-light btn-block">
-       <%= link_to icon('fas','user-gear'), edit_user_path(@user_id) %>
-      </button>
-      <h1>New Book</h1>
-      <%= form_with model: @book, url: books_path(current_user.id), method: :post do |f| %>
-        <h4>Title</h4>
-        <%= f.text_field :title %>
-
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
-
-      <% end %>
-    </div>
+   <%= render 'books/list', book: @book, user_id: @user_id %>
     <div class = "col-lg-8">
      <h1>Books</h1>
       <table class="table table-striped">
@@ -50,7 +22,7 @@
            <tr>
             <td><%= image_tag current_user.get_profile_image %></td>
             <td>
-                <%= link_to  f.title, book_path(@book_id) %>
+                <%= link_to  f.title, book_path(f) %>
             </td>
             <td>
                 <%= f.body %>
