--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,4 +1,4 @@
- <div class = "row">
+
     <div class = "col-lg-4">
 
       <h1>User info</h1>
@@ -27,7 +27,7 @@
        <%= link_to icon('fas','user-gear'), edit_user_path(user_id) %>
       </button>
       <h1>New Book</h1>
-      <%= form_with model: book, url: books_path(current_user.id), method: :post do |f| %>
+      <%= form_with model: book, method: :post do |f| %>
         <h4>Title</h4>
         <%= f.text_field :title %>
 
@@ -37,4 +37,3 @@
 
       <% end %>
     </div>
- </div>
