--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,27 +1,21 @@
 <div class="d-flex align-items-center justify-content-center">
-  <h1>User info</h1>
+  <h1>Editing Book</h1>
 </div>
-<%= form_with model: @user do |f| %>
+<%= form_with model: @book do |f| %>
   <div class="d-flex align-items-center justify-content-center">
-    <h6>Name</h6>
+    <h6>Title</h6>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-    <%= f.text_field :name, autofocus: true %>
+    <%= f.text_field :title, autofocus: true %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-    <h6>Image</h6>
+    <h6>Opinion</h6>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-     <%= f.file_field :profile_image %>
+    <%= f.text_area :body, autofocus: true %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-    <h6>introduction</h6>
-  </div>
-  <div class="d-flex align-items-center justify-content-center">
-    <%= f.text_area :introduction, autofocus: true %>
-  </div>
-  <div class="d-flex align-items-center justify-content-center">
-    <%= f.submit "Update User" %>
+    <%= f.submit "Update Book" %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
     <%= link_to "Show", book_path %>
