--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,28 +1,27 @@
 <div class = "container">
+ <div class = "row">
   <%= render 'books/list', book: @book, user_id: @user_id %>
-  <div class = "row">
-    <div class = "col-lg-8">
+  <div class = "col-lg-8">
      <h1>Book detail</h1>
-     <table  class="table table-striped">
+     <table>
       <tbody>
            <tr>
             <td>
               <%= image_tag current_user.get_profile_image %>
-            </td>
-           </tr>
-           <tr>
-            <td>
-              <%= @book_params.title %>
-            </td>
-           </tr>
-           <tr>
-            <td>
+              <%= link_to @book_params.title, book_path %>
               <%= @book_params.body %>
+              <button type = "button" class = "btn  btn-info">
+               <%= link_to "Edit", edit_book_path(@book_params) %>
+              </button>
+              <button type = "button" class = "btn  btn-success">
+               <%= link_to "Destroy", book_path(@book_params), method: :delete  %>
+              </button>
+              <p><%= link_to current_user.name, user_path(@user_id) %></p>
             </td>
            </tr>
       </tbody>
      </table>
-    </div>
   </div>
+ </div>
 </div>
 
