--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
               <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "Users", users_path(current_user.id), class: 'nav-link text-dark' %>
+              <%= link_to "Users", users_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
-              <%= link_to "Books", books_path(current_user.id), class: 'nav-link text-dark' %>
+              <%= link_to "Books", books_path, class: 'nav-link text-dark' %>
             </li>
             <li class="nav-item">
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
@@ -55,6 +55,9 @@
        </nav>
     </header>
     <main>
+     <div class = "text-success">
+      <%= flash[:notice] %>
+     </div>
      <%= yield %>
     </main>
     <footer>
