--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,45 +1,27 @@
 <div class = "container">
   <div class = "row">
-    <div class = "col-lg-4">
-
-      <h1>User info</h1>
-      <%= image_tag current_user.get_profile_image %>
-      <table class = "table table-striped">
-       <tbody>
-         <tr>
-           <th>
-             name
-           </th>
-           <th>
-             <%= current_user.name %>
-           </th>
-         </tr>
-         <tr>
-           <th>
-             introduction
-           </th>
-           <th>
-             <%= current_user.introduction %>
-           </th>
-         </tr>
-       </tbody>
-      </table>
-      <button type = "button" class = "btn  btn-light btn-block">
-       <%= link_to icon('fas','user-gear'), edit_user_path(@user_id) %>
-      </button>
-      <h1>New Book</h1>
-      <%= form_with model: @book, url: books_path(current_user.id), method: :post do |f| %>
-        <h4>Title</h4>
-        <%= f.text_field :title %>
-
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
-
-      <% end %>
-    </div>
+   <%= render 'books/list', book: @book, user_id: @user_id %>
     <div class = "col-lg-8">
-
+      <h1>User</h1>
+      <table class="table table-striped">
+        <tbody>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+          </tr>
+          <% @users.each do |f| %>
+           <tr>
+            <td><%= image_tag current_user.get_profile_image %></td>
+            <td>
+                <%= f.name  %>
+            </td>
+            <td>
+                <%= link_to 'Show', user_path(current_user.id) %>
+            </td>
+           </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
