--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,12 +11,12 @@
           </tr>
           <% @users.each do |f| %>
            <tr>
-            <td><%= image_tag current_user.get_profile_image %></td>
+            <td><%= image_tag .get_profile_image(100,100) %></td>
             <td>
                 <%= f.name  %>
             </td>
             <td>
-                <%= link_to 'Show', user_path(current_user.id) %>
+                <%= link_to 'Show', user_path(f) %>
             </td>
            </tr>
           <% end %>
