--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -2,7 +2,7 @@
     <div class = "col-lg-4">
 
       <h1>User info</h1>
-      <%= image_tag current_user.get_profile_image %>
+      <%= image_tag user_id.get_profile_image %>
       <table class = "table table-striped">
        <tbody>
          <tr>
@@ -10,7 +10,7 @@
              name
            </th>
            <th>
-             <%= current_user.name %>
+             <%= user_id.name %>
            </th>
          </tr>
          <tr>
@@ -18,7 +18,7 @@
              introduction
            </th>
            <th>
-             <%= current_user.introduction %>
+             <%= user_id.introduction %>
            </th>
          </tr>
        </tbody>
