--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,29 +25,53 @@
           <ul class="navbar-nav ml-auto">
            <% if user_signed_in? %>
             <li class="nav-item">
-              <%= link_to "Home", user_path(current_user.id), class: 'nav-link text-dark' %>
+              <%= link_to user_path(current_user.id), class: 'nav-link text-dark' do %>
+               <i class="fa-solid fa-house"></i>
+               Home
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Users", users_path, class: 'nav-link text-dark' %>
+              <%= link_to users_path, class: 'nav-link text-dark' do %>
+               <i class="fa-sharp fa-solid fa-users"></i>
+               Users
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Books", books_path, class: 'nav-link text-dark' %>
+              <%= link_to books_path, class: 'nav-link text-dark' do %>
+               <i class="fa-regular fa-book"></i>
+               Books
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+              <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
+               <i class="fa-solid fa-right-from-bracket"></i>
+               Log Out
+              <% end %>
             </li>
             <% else %>
             <li class="nav-item">
-              <%= link_to "Home", root_path, class: 'nav-link text-dark' %>
+              <%= link_to root_path, class: 'nav-link text-dark' do %>
+               <i class="fa-solid fa-house"></i>
+               Home
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "About", about_path, class: 'nav-link text-dark' %>
+              <%= link_to about_path, class: 'nav-link text-dark' do %>
+               <i class="fa-solid fa-check"></i>
+               About
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+              <%= link_to new_user_registration_path, class: 'nav-link text-dark' do %>
+               <i class="fa-thin fa-user-plus"></i>
+               Sign Up
+              <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
+              <%= link_to new_user_session_path, class: 'nav-link text-dark' do %>
+               <i class="fa-solid fa-right-to-bracket"></i>
+               Log in
+              <% end %>
             </li>
            <% end %>
           </ul>
