--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -20,7 +20,7 @@
     <h6>Image</h6>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-     <%= f.file_field :profile_image %>
+     <%= f.file_field :profile_image, accept: "image/*" %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
     <h6>introduction</h6>
