--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
           </tr>
           <% @users.each do |f| %>
            <tr>
-            <td><%= image_tag .get_profile_image(100,100) %></td>
+            <td><%= image_tag f.get_profile_image, size: "100x100" %></td>
             <td>
                 <%= f.name  %>
             </td>
