--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,17 +9,19 @@
             <th>Title</th>
             <th>Opinion</th>
           </tr>
-          <% @books.each do |f| %>
-           <tr>
-            <td><%= image_tag current_user.get_profile_image %></td>
-            <td>
-                <%= link_to  f.title, book_path(f) %>
-            </td>
-            <td>
+            <% @books.each do |f| %>
+             <tr>
+              <td><%= image_tag f.get_profile_image, size: "100x100" %></td>
+                <td>
+                  <%= link_to book_path(f) do %>
+                   <%= f.title %>
+                  <% end %>
+                </td>
+              <td>
                 <%= f.body %>
-            </td>
-           </tr>
-          <% end %>
+              </td>
+             </tr>
+            <% end %>
         </tbody>
       </table>
     </div>
