--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -3,6 +3,7 @@
     <div class = "message mx-auto">
       <h1>
         welcome to
+        <i class="fa-solid fa-book"></i>
         <strong>
           Bookers
         </strong>
@@ -10,6 +11,7 @@
       </h1>
       <p>
         In
+        <i class="fa-solid fa-book"></i>
         <strong>
           Bookers
         </strong>
