--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,8 +1,8 @@
 
-    <div class = "col-lg-4">
+
 
       <h1>User info</h1>
-      <%= image_tag user_id.get_profile_image %>
+      <%= image_tag user_id.get_profile_image, size: "100x100" %>
       <table class = "table table-striped">
        <tbody>
          <tr>
@@ -23,17 +23,17 @@
          </tr>
        </tbody>
       </table>
-      <button type = "button" class = "btn  btn-light btn-block">
-       <%= link_to icon('fas','user-gear'), edit_user_path(user_id) %>
-      </button>
-      <h1>New Book</h1>
+       <%= link_to edit_user_path(user_id), class: "btn  btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+       <% end %>
+      <h1>New book</h1>
       <%= form_with model: book, method: :post do |f| %>
         <h4>Title</h4>
         <%= f.text_field :title %>
 
         <h4>Opinion</h4>
         <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
+        <%= f.submit "Create Book", class: "btn btn-success" %>
 
       <% end %>
     </div>
