--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -3,7 +3,7 @@
     <div class = "message mx-auto">
       <h1>
         welcome to
-        <i class="fa-solid fa-book"></i>
+        <i class="fas fa-book"></i>
         <strong>
           Bookers
         </strong>
@@ -11,7 +11,7 @@
       </h1>
       <p>
         In
-        <i class="fa-solid fa-book"></i>
+        <i class="fas fa-book"></i>
         <strong>
           Bookers
         </strong>
@@ -21,14 +21,12 @@
       <p> about various books!</p>
       <div class = "wrapper col-10 mx-auto">
         <div class = "row">
-         <button type = "button" class = "btn  btn-info btn-block">
-          <%= link_to "Log in", new_user_session_path %>
-         </button>
+
+          <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+
         </div>
         <div class="row">
-         <button type = "button" class = "btn  btn-success btn-block">
-           <%= link_to "Sign up", new_user_registration_path %>
-         </button>
+           <%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-sm btn-block sign_up"  %>
         </div>
       </div>
     </div>
