--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <div class = "container">
   <div class = "row">
-   <%= render 'books/list', book: @book, user_id: @user_id %>
-    <div class = "col-lg-8">
+   <div class = "col-md-3">
+    <%= render 'books/list', book: @book, user_id: @user_id %>
+     <div class = "col-md-8 offset-md-1" >
       <h1>User</h1>
       <table class="table table-striped">
         <tbody>
@@ -22,6 +23,7 @@
           <% end %>
         </tbody>
       </table>
-    </div>
+     </div>
+   </div>
   </div>
 </div>
