--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <div class = "container">
   <div class = "row">
-   <%= render 'books/list', book: @book, user_id: @user_id %>
-    <div class = "col-lg-8">
+   <div class = "col-md-3">
+    <%= render 'books/list', book: @book, user_id: @user_id %>
+     <div class = "col-md-8 offset-md-1">
       <h1>Books</h1>
       <table class = "table table-striped">
         <tbody>
@@ -24,6 +25,7 @@
             <% end %>
         </tbody>
       </table>
-    </div>
+     </div>
+   </div>
   </div>
 </div>
