--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -23,11 +23,11 @@
     <%= f.text_area :body, autofocus: true %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-    <%= f.submit "Update Book" %>
+    <%= f.submit "Update Book", class: "btn btn-success" %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
     <%= link_to "Show", book_path %>
     <span>|</span>
-    <%= link_to "Back", books_path %>
+    <%= link_to "Back", '/books' %>
   </div>
 <% end %>
