--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,7 @@
               <%= link_to @book_params.title, book_path %>
               <%= @book_params.body %>
               <% if @user_id == current_user %>
-               <%= link_to edit_book_path(@book_params) do %>
+               <%= link_to edit_book_path do %>
                 <button type = "button" class = "btn  btn-sm btn-success">
                   Edit
                 </button>
