--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -26,7 +26,7 @@
 
         </div>
         <div class="row">
-           <%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-sm btn-block sign_up"  %>
+           <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up"  %>
         </div>
       </div>
     </div>
