--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,13 +31,13 @@
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to '/users', class: 'nav-link text-light' do %>
+              <%= link_to "/users", class: 'nav-link text-light' do %>
                <i class="fas fa-users"></i>
                Users
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to '/books', class: 'nav-link text-light' do %>
+              <%= link_to "/books", class: 'nav-link text-light' do %>
                <i class="fas fa-book-open"></i>
                Books
               <% end %>
