--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -29,11 +29,6 @@
     <%= f.text_area :introduction, autofocus: true %>
   </div>
   <div class="d-flex align-items-center justify-content-center">
-    <%= f.submit "Update User" %>
-  </div>
-  <div class="d-flex align-items-center justify-content-center">
-    <%= link_to "Show", book_path %>
-    <span>|</span>
-    <%= link_to "Back", books_path %>
+    <%= f.submit "Update User", class: "btn btn-success" %>
   </div>
 <% end %>
