--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,12 +12,14 @@
     <%= render 'books/list', book: @book, user_id: @user_id %>
      <div class = "col-md-8 offset-md-1">
       <h1>Books</h1>
-      <table class="table table-striped">
-        <tbody>
+      <table class="table table-hover table-inverse">
+        <thead>
           <tr>
             <th>Title</th>
             <th>Opinion</th>
           </tr>
+        </thead>
+        <tbody>
           <% @books.each do |f| %>
            <tr>
             <td>
